# Discord-ROAS-Bot

./: .cursorignore  .dockerignore  .encryption_key  .env  .env.example  .env.test  .gitignore  .linkcheckignore  .linkcheckrc.yml  =2.10.6  CHANGELOG.md  CLAUDE.md  DEBUG_ANALYSIS_REPORT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  Dockerfile  Dockerfile.dev  Dockerfile.simple  LICENSE  Makefile  PERFORMANCE_OPTIMIZATION_SUMMARY.md  PROJECT_HANDOVER.md  README.md  README_ERROR_HANDLING.md  README_PRD_EXECUTION.md  README_STARTUP_OPTIMIZATION.md  REFACTOR_PROGRESS.md  RELEASE_v1.7.md  VERSION_MANAGEMENT.md  __init__.py  activity_meter_flowchart.md  alembic.ini  baseline_security.json  cache.db  config.py  conftest.py  coverage.json  deploy.py  docker-compose.dev.optimized.yml  docker-compose.dev.yml  (+36 more)
.bmad-2d-phaser-game-dev/: install-manifest.yaml
.bmad-2d-unity-game-dev/: install-manifest.yaml
.bmad-core/: install-manifest.yaml
.bmad-infrastructure-devops/: install-manifest.yaml
.claude/: settings.local.json
.clinerules/: 01-bmad-master.md
.github/: linkcheck-ci.json
.serena/: project.yml
backup_python312_upgrade/: CHANGELOG.md  cache.db  requirement.txt  run_tests_optimized.py  upgrade_to_python312.py
backups/: backup_index.json
cogs/: achievement.py  database.py  economy.py  government.py  message_listener.py  subbot_management.py  sync_data.py  welcome.py
config/: achievement.yaml  database.yaml  deployment-trigger.json  government.yaml  quality-gates.json  rollback.json
core/: __init__.py  api_contracts.py  base_service.py  database_manager.py  database_performance_monitor.py  deployment_manager.py  environment_validator.py  error_handler.py  exceptions.py  integration_test_suite.py  monitoring_collector.py  performance_alerting.py  performance_optimizer.py  security_manager.py  service_integration_coordinator.py  service_startup_manager.py  service_startup_orchestrator.py  unified_health_checker.py  unified_logging_integration.py
dbs/: activity.db  activity.db-shm  activity.db-wal  anti_executable.db  discord_data.db  message.db-shm  messages.db  messages.db-shm  messages.db-wal  welcome.db  welcome.db-shm  welcome.db-wal
deployment/: backup.sh  deploy.sh  nginx.conf
docker/: compose.yaml
docs/: DOCKER_CONFIGURATION_COMPARISON.md  DOCKER_CONFIGURATION_GUIDE.md  DOCKER_TESTING_COVERAGE_COMPLETION.md  DOCKER_TESTING_INFRASTRUCTURE.md  DOCKER_TROUBLESHOOTING_GUIDE.md  INFRASTRUCTURE_IMPROVEMENTS_T1.md  INFRASTRUCTURE_IMPROVEMENTS_T2.md  INFRASTRUCTURE_IMPROVEMENTS_T3.md  TESTING.md  architecture.md  brief.md  dependency-policy.md  error-codes.md  installation.md  performance-benchmarks.md  prd-1.62.md  prd-1.63.md  prd-v1.6.md  prd-v1.61.md  prd.md  python-3.13-upgrade-guide.md  run-with-docker.md  security-review-report.md  troubleshooting.md  validation_report.json
draft/: version 2.1.md  version 2.2.md  version 2.3.md
examples/: complete_deployment_monitoring.py  deployment_api_integration.py
htmlcov/: class_index.html  function_index.html  index.html  status.json  z_034734d9e4a4b7f7___init___py.html  z_074892c11d50773e___init___py.html  z_074892c11d50773e_modals_py.html  z_09ebef895eef36ee___init___py.html  z_09ebef895eef36ee_settings_embed_py.html  z_1bb02a853042f130___init___py.html  z_1bb02a853042f130_config_py.html  z_1d311c540d444fb5___init___py.html  z_1d311c540d444fb5_api_standard_py.html  z_1d311c540d444fb5_base_cog_py.html  z_1d311c540d444fb5_cache_manager_py.html  z_1d311c540d444fb5_database_pool_py.html  z_1d311c540d444fb5_dependency_container_py.html  z_1d311c540d444fb5_error_handler_py.html  z_1d311c540d444fb5_event_bus_py.html  z_1d311c540d444fb5_example_cog_py.html  z_1d311c540d444fb5_health_checker_py.html  z_1d311c540d444fb5_logger_py.html  z_1d311c540d444fb5_performance_dashboard_py.html  z_1d311c540d444fb5_permission_system_py.html  z_1d311c540d444fb5_startup_py.html  z_1d311c540d444fb5_venv_manager_py.html  z_21676b6a45ebb66a___init___py.html  z_21676b6a45ebb66a_config_py.html  z_28cd77ef49e8454e___init___py.html  z_2b3dbb9937d81bc1___init___py.html  z_2b3dbb9937d81bc1_main_py.html  z_3666872fa8dfc84b___init___py.html  z_3666872fa8dfc84b_main_view_py.html  z_3c1e955ac86f7330___init___py.html  z_3dd90071f7ad1174___init___py.html  z_3dd90071f7ad1174_config_py.html  z_3dd90071f7ad1174_persistent_config_py.html  z_413fd32fbbfb5f98___init___py.html  z_413fd32fbbfb5f98_buttons_py.html  z_47d8b18b3a7ce26a___init___py.html  (+84 more)
memory_bank/: development_progress_discord_adr_bot.md  error_records_Discord_ADR_bot_2025-01-18.md  prd.md  project_archive_summary_2025-01-18.md  project_overview_Discord_ADR_bot_2025-01-18.md  prompt.md  result.md  technical_architecture_Discord_ADR_bot_2025-01-18.md  technical_debt_Discord_ADR_bot_2025-01-18.md  test_archive_Discord_ADR_bot.md
migrations/: 0002_activity_meter_unique_constraint.sql  0002_activity_meter_unique_constraint_rollback.sql  0003_fix_activity_meter_unique_constraint.sql  0003_fix_activity_meter_unique_constraint_rollback.sql  0004_complete_activity_meter_setup.sql  0004_complete_activity_meter_setup_rollback.sql  0005_simple_activity_meter_setup.sql  0005_simple_activity_meter_setup_rollback.sql  0006_final_activity_meter_setup.sql  0007_ultra_simple_activity_meter.sql  0008_connection_pool_monitoring.sql  0008_connection_pool_monitoring_rollback.sql  0009_roas_bot_v2_4_4_core_tables.sql  0009_roas_bot_v2_4_4_core_tables_rollback.sql  0009_v2_4_4_core_tables.sql  0009_v2_4_4_core_tables_rollback.sql  0010_deployment_system_tables.sql  v2_4_4_core_tables.sql  v2_4_4_core_tables_rollback.sql
monitoring/: prometheus.yml
panels/: __init__.py  base_panel.py  economy_panel.py
quality/: mypy.ini  mypy_ci.ini  ruff.toml
scripts/: DATABASE_MIGRATION_GUIDE.md  ai_prompt_generator.py  analyze_stability.py  auto_install.ps1  auto_install.sh  auto_prompt_generator.py  backup_manager.py  ci_performance_test.sh  dashboard.py  demo_t11.py  deploy_validation.py  docker-manage.sh  enhanced_migration_manager.py  environment_validator.py  example_usage.py  execute_prd.py  generate_api_docs.py  (+51 more)
(+1141 files in other folders)
