# Discord ROAS Bot v2.0 - 企業級 Python 配置
# 企業級 Python 代碼質量標準配置

[project]
name = "discord-roas-bot"
version = "2.0.0"
description = "企業級 Discord 機器人 - 活躍度追蹤與經濟系統"
authors = [
    {name = "Bot Development Team"}
]
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "discord.py>=2.5.2,<3.0.0",
    "python-dotenv>=1.1.0,<2.0.0",
    "aiosqlite>=0.21.0,<1.0.0",
    "pydantic>=2.5.0,<3.0.0",
    "pydantic-settings>=2.1.0,<3.0.0",
    "PyYAML>=6.0.0,<7.0.0",
    "cryptography>=41.0.0,<42.0.0",
    "watchfiles>=0.21.0,<1.0.0",
    "structlog>=23.2.0,<24.0.0",
    "python-json-logger>=2.0.0,<3.0.0",
    "SQLAlchemy>=2.0.0,<3.0.0",
    "alembic>=1.13.0,<2.0.0",
    "cachetools>=5.3.2,<6.0.0",
    "Pillow>=11.2.1,<12.0.0",
    "typer>=0.12.0,<1.0.0",
    "rich>=13.7.0,<14.0.0",
    "psutil>=7.0.0",
    "numpy>=2.3.2",
    "requests>=2.32.4",
    "tldextract>=5.3.0",
    "chardet>=5.2.0",
    "aiohttp[speedups]>=3.9.0,<4.0.0",
    "uvloop>=0.19.0; sys_platform != 'win32'",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=4.0.0",
    "pytest-benchmark>=4.0.0",
    "dpytest>=0.7.0",
    "ruff>=0.12.5",
    "mypy>=1.7.0",
    "black>=24.0.0",
]

[tool.ruff]
# 設定基本參數
line-length = 88
target-version = "py312"
src = ["src", "scripts", "utils"]
fix = true

# 包含的檔案類型
include = ["*.py", "*.pyi", "*.ipynb"]
extend-include = ["*.py"]

# 排除的目錄和檔案
exclude = [
    ".git",
    ".venv", 
    "__pycache__",
    "build/",
    "dist/",
    "logs/",
    "dbs/",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache"
]

[tool.ruff.lint]
# 啟用的規則集
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings  
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "ARG",   # flake8-unused-arguments
    "PTH",   # flake8-use-pathlib
    "PLR",   # Pylint
    "PLC",   # Pylint Convention
    "UP",    # pyupgrade
    "RUF",   # Ruff-specific rules
    "ERA",   # eradicate
    "TC",    # flake8-type-checking
]

# 忽略特定規則（基於目前項目狀況）
ignore = [
    # 暫時忽略的規則（需要逐步修復）
    "PTH123",  # builtin-open - 需要大量重構
    "PTH110",  # os-path-exists - 需要大量重構  
    "PTH118",  # os-path-join - 需要大量重構
    "PTH103",  # os-makedirs - 需要大量重構
    "PTH120",  # os-path-dirname - 需要大量重構
    "PLR2004", # magic-value-comparison - 需要重構常數
    "PLC0415", # import-outside-top-level - script 檔案的特殊需求
    "RUF002",  # ambiguous-unicode-character-docstring - 中文註釋特殊需求
    "RUF003",  # ambiguous-unicode-character-comment - 中文註釋特殊需求
    "ERA001",  # commented-out-code - 開發期間的暫時註釋
    
    # 複雜度相關（目前項目階段可接受）
    "PLR0911", # too-many-return-statements
    "PLR0915", # too-many-statements
    
    # 未使用參數（某些情況下需要保留介面一致性）
    "ARG001",  # unused-function-argument
    "ARG002",  # unused-method-argument  
    "ARG004",  # unused-static-method-argument
]

# Fixable 規則
fixable = ["ALL"]
unfixable = []

# 每個檔案的規則忽略設定
[tool.ruff.lint.per-file-ignores]
# Scripts 和 utilities 可以有較寬鬆的規則
"scripts/*.py" = ["PLC0415", "E402", "PTH123", "PTH110", "PTH118"]
"utils/*.py" = ["PLC0415", "E402", "PTH123", "PTH110", "PTH118"]

# 測試檔案特殊規則
"tests/**/*.py" = ["ARG001", "ARG002", "PLR2004"]
"**/test_*.py" = ["ARG001", "ARG002", "PLR2004"]

# 遷移和設定檔案
"**/migrations/*.py" = ["ERA001", "F401"]
"**/config/*.py" = ["PLR2004"]

[tool.ruff.lint.isort]
# Import 排序配置
known-first-party = ["src", "cogs", "scripts", "utils"]
known-local-folder = ["src"]
force-single-line = false
combine-as-imports = true
split-on-trailing-comma = true

[tool.ruff.lint.mccabe]
# 複雜度限制
max-complexity = 12

[tool.ruff.lint.pylint]
# Pylint 特定配置
max-args = 8
max-locals = 20
max-returns = 8
max-statements = 60

[tool.ruff.format]
# 代碼格式化配置
quote-style = "double"
indent-style = "space"
line-ending = "auto"
docstring-code-format = true

# 預覽功能
preview = true

# ================================
# Testing Configuration
# ================================

[tool.pytest.ini_options]
# 測試目錄
testpaths = ["tests"]

# Python 文件模式
python_files = ["test_*.py", "*_test.py"]

# Python 類別模式
python_classes = ["Test*"]

# Python 函數模式
python_functions = ["test_*"]

# 額外的命令列選項
addopts = [
    "-v",                           # 詳細輸出
    "--strict-markers",             # 嚴格標記模式
    "--tb=short",                   # 簡潔的錯誤追蹤
    "--asyncio-mode=auto",          # 自動異步模式
    "--disable-warnings",           # 禁用警告
    "--cov=src",                    # 覆蓋率檢查源碼目錄
    "--cov-report=term-missing",    # 終端報告顯示遺漏行
    "--cov-report=xml:coverage.xml", # XML 報告
    "--cov-report=html:htmlcov",    # HTML 報告到指定目錄
    "--cov-fail-under=10",          # 初始覆蓋率門檻 10%（建立基礎設施階段）
]

# 異步測試配置
asyncio_mode = "auto"

# 測試標記
markers = [
    "unit: 單元測試標記",
    "integration: 整合測試標記", 
    "security: 安全測試標記",
    "performance: 效能測試標記",
    "database: 資料庫測試標記",
    "slow: 緩慢測試標記",
    "network: 需要網路的測試",
    "mock: 使用Mock對象的測試",
    "panel: 面板功能測試標記",
    "embed: Discord 嵌入測試標記",
    "component: Discord 組件測試標記", 
    "dpytest: dpytest 框架測試標記",
    "regression: 回歸測試標記"
]

# 最低Python版本
minversion = "7.0"

# 日誌配置
log_auto_indent = true
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(name)s: %(message)s"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

# 過濾警告
filterwarnings = [
    "ignore::UserWarning",
    "ignore::DeprecationWarning",
    "ignore::pytest.PytestUnraisableExceptionWarning"
]

# ================================
# Coverage Configuration
# ================================

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/venv/*",
    "*/__pycache__/*",
    "scripts/*",
    "utils/*"
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if self.debug:",
    "if settings.DEBUG",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:"
]
show_missing = true
precision = 2
fail_under = 10

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# ================================
# Type Checking Configuration
# ================================

[tool.mypy]
# 基本設定
python_version = "3.12"
platform = "win32"

# 指向專用的嚴格配置檔案
config_file = "quality/mypy.ini"

# 檔案搜尋設定
files = ["src", "scripts", "utils"]
exclude = [
    "build/",
    "dist/", 
    ".venv/",
    "__pycache__/",
    "logs/",
    "dbs/",
    "*.egg-info",
    ".pytest_cache",
    ".mypy_cache",
    ".ruff_cache"
]

# 快取設定
cache_dir = ".mypy_cache"
sqlite_cache = true
incremental = true

# 輸出格式
show_error_codes = true
show_column_numbers = true
pretty = true
color_output = true

# 第三方函式庫處理
ignore_missing_imports = true
follow_imports = "normal"

# 錯誤報告
show_traceback = false
raise_exceptions = false

# 型別檢查嚴格性（由 quality/mypy.ini 控制）
# 這裡保持基本設定，詳細配置在專用檔案中
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

# 專案特定的模組配置
[[tool.mypy.overrides]]
module = [
    "discord.*",
    "aiosqlite.*", 
    "PIL.*",
    "numpy.*",
    "pytest.*",
    "pytest_asyncio.*",
    "dpytest.*"
]
ignore_missing_imports = true


